--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.dansiviter.logging</groupId>
 	<artifactId>logging</artifactId>
-	<version>0.1.2-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<url>https://github.com/dansiviter/logging</url>
 	<scm>
-		<developerConnection>scm:git:git@gitlab.com:dansiviter/logging.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:dansiviter/logging.git</developerConnection>
 		<tag>HEAD</tag>
   </scm>
 
@@ -35,12 +35,12 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/dansiviter/logger</url>
+			<url>https://maven.pkg.github.com/dansiviter/logging</url>
 		</repository>
 		<snapshotRepository>
 			<id>github</id>
 			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/dansiviter/logger</url>
+			<url>https://maven.pkg.github.com/dansiviter/logging</url>
 		</snapshotRepository>
 	</distributionManagement>
 
