--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<module>core</module>
 		<module>processor</module>
 		<module>cdi</module>
+		<module>benchmarks</module>
 	</modules>
 
 	<dependencyManagement>
@@ -68,6 +69,12 @@
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest</artifactId>
 				<version>2.2</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.awaitility</groupId>
+				<artifactId>awaitility</artifactId>
+				<version>4.0.3</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
