--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -14,12 +14,14 @@
 			<artifactId>core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-core</artifactId>
-			<scope>compile</scope>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>processor</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-core</artifactId>
@@ -40,6 +42,10 @@
 				<version>3.2.4</version>
 				<executions>
 					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
