--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -32,30 +32,29 @@
 			<artifactId>jmh-generator-annprocess</artifactId>
 			<version>1.27</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.4.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.4</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-						<configuration>
-							<transformers>
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>uk.dansiviter.logging.JmhMain</mainClass>
-								</transformer>
-							</transformers>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>2.8.0</version>
+        <configuration>
+					<from>
+						<image>openjdk:16-jdk-alpine</image>
+					</from>
+					<container>
+						<mainClass>uk.dansiviter.logging.JmhMain</mainClass>
+					</container>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 </project>
