--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>uk.dansiviter.logging</groupId>
-		<artifactId>logging</artifactId>
+		<groupId>uk.dansiviter.juli</groupId>
+		<artifactId>juli-project</artifactId>
 		<version>0.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>benchmarks</artifactId>
@@ -49,7 +49,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>uk.dansiviter.logging.JmhMain</mainClass>
+									<mainClass>uk.dansiviter.juli.JmhMain</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
