--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,14 @@
 name: Java CI
 on:
   push:
-    branches: [ main ]
+    branches:
+    - main
+    - 'releases/**'
+    - 'feature/MavenCentral'
   pull_request:
-    branches: [ main ]
+    branches:
+    - main
+    - 'releases/**'
 
 jobs:
   build:
@@ -22,16 +27,15 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Build with Maven
-      run: mvn -B -ntp package -f pom.xml -DskipITs
-    - name: Re-version
-      if: startsWith(github.ref, 'refs/heads/feature/') || startsWith(github.ref, 'refs/heads/bugfix/') || startsWith(github.ref, 'refs/heads/hotfix/')
+    - name: Set up Apache Maven Central
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_CENTRAL_TOKEN
+    - name: Publish to Apache Maven Central Snapshot
+      run: mvn -B -ntp source:jar javadoc:jar deploy
       env:
-        GITHUB_REF: ${{ github.ref }}
-      run: |
-        github_ref_slug="${GITHUB_REF////-}"
-        mvn -B -ntp versions:set -DgenerateBackupPoms=false -DnewVersion=${github_ref_slug}-SNAPSHOT
-    - name: Deploy
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-      run: mvn -B -ntp source:jar deploy -DskipTests -DskipITs
+        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
