--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,26 @@
 name: Publish package to GitHub Packages
 on:
   release:
-    types: [created]
+    types: [ created ]
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-    - name: Set up JDK 11
+    - name: Set up Apache Maven Central
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Deploy
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_CENTRAL_TOKEN
+        gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE
+    - name: Publish to Apache Maven Central Snapshot
+      run: mvn -B -ntp source:jar javadoc:jar package gpg:sign deploy
       env:
-        GITHUB_TOKEN: ${{ github.token }}
-      run: mvn -B -ntp source:jar deploy -DskipTests -DskipITs
+        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+
