--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
 
 		<sonar.projectKey>dansiviter_juli</sonar.projectKey>
 		<sonar.organization>dansiviter-github</sonar.organization>
+		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		
+		        
 		<module.name>${project.groupId}.${project.artifactId}</module.name>
 	</properties>
 
