--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+		<sonar.projectKey>dansiviter_juli</sonar.projectKey>
+		<sonar.organization>dansiviter-github</sonar.organization>
+		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		        
 		<module.name>${project.groupId}.${project.artifactId}</module.name>
 	</properties>
 
