--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>cdi</artifactId>
+	<name>CDI</name>
 
 	<dependencies>
 		<dependency>
