--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>core</artifactId>
+	<name>Core</name>
 
 	<dependencies>
 		<dependency>
