--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>juli-project</artifactId>
 	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>Java Util Logger Improver</name>
+	<name>Java Util Logger Improver (JULI)</name>
 
 	<url>https://github.com/dansiviter/juni</url>
 	<scm>
