--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>processor</artifactId>
+	<name>Annotation Processor</name>
 
 	<dependencies>
 		<dependency>
