--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 					<version>3.0.0-M1</version>
 				</plugin>
 				<plugin>
+					<groupId>org.jboss.jandex</groupId>
+					<artifactId>jandex-maven-plugin</artifactId>
+					<version>1.0.8</version>
+				</plugin>
+				<plugin>
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>0.8.6</version>
