--- a/core/src/main/resources/META-INF/native-image/uk.dansiviter.juli/core/reflect-config.json
+++ b/core/src/main/resources/META-INF/native-image/uk.dansiviter.juli/core/reflect-config.json
@@ -3,5 +3,10 @@
     "name": "uk.dansiviter.juli.AsyncConsoleHandler",
     "allDeclaredConstructors": true,
     "allPublicMethods": true
+  },
+  {
+    "name": "uk.dansiviter.juli.FallbackHandler",
+    "allDeclaredConstructors": true,
+    "allPublicMethods": true
   }
 ]
