More suitable naming

--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -11,15 +11,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>juli</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>processor</artifactId>
+			<artifactId>juli-processor</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
-			<optional>true</optional>
 		</dependency>
 
 		<dependency>
