--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -6,21 +6,24 @@
 		<artifactId>juli-project</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>cdi</artifactId>
+	<artifactId>juli-cdi</artifactId>
 	<name>CDI</name>
+
+	<properties>
+		<module.name>${project.groupId}.cdi</module.name>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>juli</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>processor</artifactId>
+			<artifactId>juli-processor</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.enterprise</groupId>
