--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -6,13 +6,17 @@
 		<artifactId>juli-project</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>processor</artifactId>
+	<artifactId>juli-processor</artifactId>
 	<name>Annotation Processor</name>
+
+	<properties>
+		<module.name>${project.groupId}.processor</module.name>
+	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>core</artifactId>
+			<artifactId>juli</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
