--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,17 +8,18 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-    - name: Set up Apache Maven Central
-      uses: actions/setup-java@v1
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        distribution: 'adopt'
+        java-version: '11'
         server-id: ossrh
         server-username: MAVEN_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
         gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
     - name: Publish to Apache Maven Central Staging repo
-      run: mvn -B -ntp source:jar javadoc:jar package gpg:sign deploy
+      run: mvn -B -ntp source:jar javadoc:jar deploy
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
