--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<url>https://github.com/dansiviter/juli</url>
 	<scm>
 		<developerConnection>scm:git:git@github.com:dansiviter/juli.git</developerConnection>
-		<tag>juli-project-0.2.3</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<licenses>
