--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.juli</groupId>
 		<artifactId>juli-project</artifactId>
-		<version>0.2.5</version>
+		<version>0.2.6-SNAPSHOT</version>
 	</parent>
 	<artifactId>juli-processor</artifactId>
 	<name>Annotation Processor</name>
