--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>uk.dansiviter.juli</groupId>
 	<artifactId>juli-project</artifactId>
-	<version>0.2.1-SNAPSHOT</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Java Util Logger Improver (JULI)</name>
+	<description>Library to help simplfy and improve java.util.logger</description>
 
-	<url>https://github.com/dansiviter/juni</url>
+	<url>https://github.com/dansiviter/juli</url>
+	<inceptionYear>2020</inceptionYear>
+
 	<scm>
 		<developerConnection>scm:git:git@github.com:dansiviter/juli.git</developerConnection>
-		<tag>juli-project-0.2.0</tag>
-  </scm>
+		<connection>scm:git:git@github.com:dansiviter/juli.git</connection>
+		<url>https://github.com/dansiviter/juli</url>
+		<tag>HEAD</tag>
+	</scm>
 
 	<licenses>
 		<license>
@@ -20,6 +25,13 @@
 			<distribution>manual</distribution>
 		</license>
 	</licenses>
+
+	<developers>
+		<developer>
+			<name>Daniel Siviter</name>
+			<email>dansiviter@gmail.com</email>
+		</developer>
+	</developers>
 
 	<properties>
 		<java.version>11</java.version>
@@ -33,7 +45,7 @@
 		<sonar.organization>dansiviter-github</sonar.organization>
 		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		        
+
 		<module.name>${project.groupId}.${project.artifactId}</module.name>
 	</properties>
 
@@ -55,7 +67,7 @@
 	</modules>
 
 	<dependencyManagement>
-    <dependencies>
+		<dependencies>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter</artifactId>
@@ -172,7 +184,7 @@
 						</goals>
 					</execution>
 				</executions>
-				</plugin>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -184,7 +196,29 @@
 				<module>processor</module>
 				<module>cdi</module>
 				<module>benchmarks</module>
-			</modules>		
+			</modules>
+		</profile>
+
+		<profile>
+			<id>release</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
