--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,8 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
     - name: Publish to Apache Maven Central Snapshot Repo
-      run: mvn -B -ntp source:jar javadoc:jar deploy
       env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+      run: mvn -B -ntp source:jar javadoc:jar sonar:sonar deploy "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
