--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,10 +26,13 @@ jobs:
         server-id: ossrh-snapshot
         server-username: MAVEN_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
-    - name: Publish to Apache Maven Central Snapshot Repo
+    - name: Build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      run: mvn -B -ntp verify sonar:sonar "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
+    - name: Publish to Apache Maven Central Snapshot Repo
+      env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
         MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
-      run: mvn -B -ntp source:jar javadoc:jar sonar:sonar deploy "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
+      run: mvn -B -ntp source:jar javadoc:jar deploy
