--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,26 +11,23 @@ jobs:
     steps:
     - name: Checkout project
       uses: actions/checkout@v2
-    - name: Cache local Maven repository
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '11'
+        cache: 'maven'
         server-id: ossrh-snapshot
         server-username: MAVEN_USERNAME
         server-password: MAVEN_CENTRAL_TOKEN
+
     - name: Build
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B -ntp verify sonar:sonar "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
+
     - name: Publish to Apache Maven Central Snapshot Repo
       env:
         MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
