--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.juli</groupId>
 		<artifactId>juli-project</artifactId>
-		<version>0.4.0</version>
+		<version>0.4.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>juli</artifactId>
 	<name>Core</name>
