--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -1,6 +1,5 @@
-name: Bug Report
+name: Bug
 description: File a bug report
-title: "[Bug]: "
 labels: ["bug"]
 body:
   - type: markdown
@@ -48,4 +47,3 @@ body:
     attributes:
       label: Additional Context
       description: Anything else that would help such as logs, stacktraces, etc.,.
- 
