--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.juli</groupId>
 		<artifactId>juli-project</artifactId>
-		<version>0.5.1</version>
+		<version>0.5.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>juli-cdi</artifactId>
 	<name>CDI</name>
