--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -55,7 +55,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+						@{argLine} --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
