--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.juli</groupId>
 		<artifactId>juli-project</artifactId>
-		<version>0.5.2-SNAPSHOT</version>
+		<version>0.6.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>juli-processor</artifactId>
 	<name>Annotation Processor</name>
@@ -25,9 +25,9 @@
 			<version>[1.13,2.0)</version>
 		</dependency>
 		<dependency>
-			<groupId>org.graalvm.nativeimage</groupId>
-			<artifactId>svm</artifactId>
-			<version>[21.0,22.0)</version>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>jakarta.json</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 		<dependency>
@@ -55,7 +55,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>
-						--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+						@{argLine} --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
