--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.jule</groupId>
 		<artifactId>jule-project</artifactId>
-		<version>0.7.1</version>
+		<version>0.7.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>jule-processor</artifactId>
 	<name>Annotation Processor</name>
