--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,4 +23,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: >
-        mvn -B -ntp verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
+        mvn -B -ntp verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar javadoc:javadoc "-Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco.xml"
