--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>uk.dansiviter.jule</groupId>
 		<artifactId>jule-project</artifactId>
-		<version>0.8.0-SNAPSHOT</version>
+		<version>0.8.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>benchmarks</artifactId>
 
@@ -24,12 +24,12 @@
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-core</artifactId>
-			<version>1.36</version>
+			<version>[1.36,2.0)</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openjdk.jmh</groupId>
 			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>1.36</version>
+			<version>[1.36,2.0)</version>
 		</dependency>
 	</dependencies>
 
