--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,5 +1,5 @@
 name: 🚀 Feature Request
-description: File a bug report
+description: Request a feature
 labels: ["enhancement"]
 body:
   - type: markdown
